# ikea-api-wrapped

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: pre-commit-autoupdate.yml  release.yml
ikea_api_wrapped/: __init__.py  wrappers.py
ikea_api_wrapped/parsers/: purchases.py
ikea_api_wrapped/parsers/item/: __init__.py  ingka.py  iows.py  pip.py
src/ikea_api_wrapped/: __init__.py  _utils.py  _wrappers.py  types.py  wrappers.py
src/ikea_api_wrapped/_parsers/: order_capture.py  purchases.py
src/ikea_api_wrapped/_parsers/item/: ingka.py  iows.py  pip.py
src/ikea_api_wrapped/parsers/: __init__.py  order_capture.py  purchases.py
src/ikea_api_wrapped/parsers/item/: ingka.py  iows.py  pip.py
