[tool.black]
target-version = ["py39"]

[tool.isort]
profile = "black"

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.9"
reportMissingTypeStubs = false

[tool.semantic_release]
branch = "main"
version_variable = "src/ikea_api_wrapped/__init__.py:__version__"
build_command = "pip install build && python -m build"
commit_subject = "сhore: Update version to {version}"

[build-system]
requires = ["setuptools", "wheel"]
