[metadata]
name = ikea_api_wrapped
version = attr: ikea_api_wrapped.__version__
url = https://github.com/vrslev/ikea-api-wrapped
description = Wrapper for vrslev/ikea-api-client
author = Lev Vereshchagin
author_email = mail@vrslev.com
license = MIT
license_file = LICENSE

[options]
packages = find:
zip_safe = False
