[metadata]
name = ikea_api_wrapped
version = attr: src.ikea_api_wrapped.__version__
url = https://github.com/vrslev/ikea-api-wrapped
description = Wrapper for vrslev/ikea-api-client. Not maintained, see https://github.com/vrslev/ikea-api-client.
author = Lev Vereshchagin
author_email = mail@vrslev.com
license = MIT
license_file = LICENSE

[options]
packages = find:
python_requires = >=3.9
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[options.package_data]
* = py.typed
